# clock

./: Button.h  CMakeLists.txt  Clock.h  Graphics.cpp  Graphics.h  List.cpp  List.h  Node.h  README.md  Text.h  Thread.cpp  Thread.h  main.cpp
logs/: 1-2023.txt  2-2023.txt  3-2023.txt
